wk_taa_taaqa/src/objects/National_Account_Management__c.object
<CustomObject>
    <description>Defines the National Account Management Role for Named Accounts with Named Account Type = National</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTN__c</fullName>
        <label>DTN</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NationalAccountManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The National Account Manager Role - NAM</description>
        <label>National Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>National_Account_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sfdc_Custid__c</fullName>
        <label>Sfdc Custid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>National Account Management</label>
    <nameField>
        <displayFormat>NAM-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>National Account Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>